tests/src/frontend/syntax/invalid/matches_named_arg_name2.sk
fun main(): void {
  a is C{b => c};
}
